# whisperccpcli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml
docs/: implementation-plan.md  review.md
npm/: .npmignore  README.md  package.json
npm/scripts/: install.js
scripts/: install.ps1  install.sh  package-release.ps1
src/: app.rs  audio.rs  main.rs  settings.rs  transcriber.rs
