[package]
name = "whispercli"
version = "0.1.2"
edition = "2021"
description = "A lightweight, local-first Whisper CLI with a calm real-time TUI."
license = "MIT"
repository = "https://github.com/Aero123421/whisperccpcli"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ratatui = "0.29"
sha1 = "0.10"
